# rynamo

./: Cargo.toml  README.md
src/: config.rs  export.rs  main.rs
src/api/: client.rs  data.rs  metadata.rs  mod.rs  solutions.rs  system_jobs.rs  users.rs
src/auth/: azure_cli.rs  mod.rs
src/models/: discovery.rs  entity.rs  mod.rs  odata.rs  query.rs  solution.rs  system_jobs.rs  user.rs
src/ui/: app.rs  components.rs  input.rs  mod.rs
