[package]
name = "rynamo"
version = "0.1.0"
edition = "2024"
description = "A TUI explorer for Dataverse and Dynamics 365"
authors = ["Amalie"]
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Azure authentication
azure_identity = "0.22"
azure_core = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration
dirs = "6"
toml = "0.8"

# Logging (optional for debugging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
chrono = "0.4"
